cursor overflow fixed, contact page overflow fixed, responsive

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -24,8 +24,13 @@
 }
 
 .cursor.expand {
-  width: 50px;
-  height: 50px;
+  width: 45px;
+  height: 45px;
   transition: width 0.3s ease, height 0.3s ease;
 }
 
+@media screen and (max-width: 768px) {
+  .cursor {
+    display: none;
+  }
+}
