--- a/src/css/Background.sass
+++ b/src/css/Background.sass
@@ -2,7 +2,6 @@
   top: 0
   left: 0
   right: 0
-  height: calc( 100% + 12px )
   margin: auto
   width: 90vw
 
@@ -11,9 +10,11 @@
 
 #portfolio .lines
   position: absolute
+  height: calc(100% + 12px)
 
 #description .lines, #contact-page .lines
   position: fixed
+  height: 100%
 
 .line
   position: absolute
