--- a/src/css/ContactPage.css
+++ b/src/css/ContactPage.css
@@ -20,7 +20,6 @@
   min-height: calc(100vh - 100px);
   padding-top: 100px;
   background-color: #171717;
-  background-color: #171717;
   background-image: url("../images/signatureGray.png");
   background-position: center;
   background-repeat: no-repeat;
@@ -28,6 +27,7 @@
   align-items: center;
   justify-content: center;
   color: #f7f7f7;
+  overflow: hidden;
 }
 
 .contact-text h1 {
