--- a/src/css/index.css
+++ b/src/css/index.css
@@ -9,6 +9,10 @@ body,
   height: 100%;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 * {
   font-family: "Comfortaa", Arial, Helvetica, sans-serif;
 }
